# mcd-target-hunter

./: .gitignore  CHANGELOG.txt  LICENSE  MCDTargetHunter.spec  README.md  pyproject.toml  requirements-dev.txt
src/mcdtargethunter/: cli.py  mcd_hunter_core.py  mcd_target_hunter_gui.py
