[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcdtargethunter"
version = "1.0.0"
description = "MCD Target Hunter - GUI + core scanner"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]